# JniAutoGen

./: README.md
example/: settings.gradle
example/app/: build.gradle
example/app/src/androidTest/java/com/java/jniautogendemo/: ExampleInstrumentedTest.java
example/app/src/main/: AndroidManifest.xml
example/app/src/main/cpp/: CMakeLists.txt  NativeClass_jni.cpp  NativeClass_jni.h
example/app/src/main/cpp/sdk/android/api/jni/: class_loader.cc  java_types.cc  jni_common.cc  jni_generator_helper.cc  jni_generator_helper.h  jni_onload.cc  ref_count.h  ref_counter.h  scoped_java_ref_counted.h
example/app/src/main/cpp/sdk/android/api/native_api/generated_external_classes_jni/: ArrayList_jni.h  BigInteger_jni.h  Integer_jni.h  LinkedHashMap_jni.h  Map_jni.h
example/app/src/main/cpp/sdk/android/api/native_api/generated_native_api_jni/: JniCommon_jni.h  JniHelper_jni.h
example/app/src/main/java/com/java/jniautogendemo/: MainActivity.java  NativeClass.java  Utils.java
example/app/src/main/java/io/rong/base/internal/: JniCommon.java  JniHelper.java
example/app/src/main/res/values/: strings.xml  themes.xml
example/app/src/main/res/values-night/: themes.xml
example/app/src/test/java/com/java/jniautogendemo/: ExampleUnitTest.java
example/gradle/wrapper/: gradle-wrapper.properties
jni_generator_script/: README.md  build.sh
jni_generator_script/java_dir/: NativeClass.java
jni_generator_script/out_dir/NativeClass/: NativeClass_jni.h
jni_generator_script/src/base/android/jni_generator/: jni_generator.py
src/cpp/sdk/android/api/jni/: class_loader.h  java_types.h  jni_helpers.cc  jni_helpers.h  jni_int_wrapper.h  scoped_java_ref.h  scoped_java_ref_counted.cc
src/cpp/sdk/android/api/native_api/generated_external_classes_jni/: Boolean_jni.h  Double_jni.h  Enum_jni.h  Iterable_jni.h  Iterator_jni.h  Long_jni.h
src/cpp/sdk/android/api/native_api/generated_native_api_jni/: RefCounted_jni.h  RongJniClassLoader_jni.h
src/java/io/rong/base/internal/: CalledByNative.java  RefCounted.java  RongJniClassLoader.java
